<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_bar"
        android:drawableStart="@drawable/search"
        android:drawablePadding="10dp"
        android:hint="@string/search_for_products"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9" />

    <TextView
        android:id="@+id/cat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/categories"
        android:textColor="@color/dark_blue"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cat_men"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/category_ripple_effect"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cat_title"
        app:layout_constraintWidth_percent=".9">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/men"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/men_s"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cat_women"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/category_ripple_effect"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cat_men"
        app:layout_constraintWidth_percent=".9">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/women"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/women_s"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cat_electronics"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/category_ripple_effect"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cat_women"
        app:layout_constraintWidth_percent=".9">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/electronics"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/electronics"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cat_jewelry"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/category_ripple_effect"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cat_electronics"
        app:layout_constraintWidth_percent=".9">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/jewelry"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/jewelry"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>